<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notifications">Notifications</string>
    <string name="notifications_explanation">Momentan funktioniert die Renault API für Notifications noch nicht (zumindest für mich). Deshalb ist es über das Lade-Tracking gelöst. Um die Push Notifications zu nutzen aktiviere bitte den Tracker.</string>
    <string name="default_notification_channel_title">Allgemeine Erinnerungen</string>
    <string name="default_notification_channel_description">Allgemeine Erinnerungen</string>
    <string name="activate_charge_tracker">Charge-Tracker aktivieren</string>
    <string name="charging_done">Laden fertig</string>
    <string name="charging_started">Laden gestartet</string>
    <string name="low_battery">Batteriestand niedrig</string>
    <string name="charge_error">Ladefehler Warnung</string>
    <string name="charge_eigthy_percent_warning">80% Warnung</string>
</resources>