<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/WidgetCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

        <TextView
                android:id="@+id/headline"
                style="@style/TextAppearance.App.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications" />

        <TextView
                style="@style/TextAppearance.App.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notifications_explanation" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/charge_tracking_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:icon="@drawable/ic_baseline_track_changes_24"
                android:text="@string/activate_charge_tracker" />

        <Switch
                android:id="@+id/charge_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/charging_done" />

        <Switch
                android:id="@+id/charge_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/charging_started" />

        <Switch
                android:id="@+id/battery_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/low_battery" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>